fixing to list